refactored table css and html, fixed issue with cell width overflow

--- a/resources/css/activity.css
+++ b/resources/css/activity.css
@@ -1,6 +1,9 @@
 /*
  * This stylesheet contains style properties that apply to the table and the
  * controls for the table.
+ *
+ * These style properties are applied to the table controls displayed on the
+ * page.
  */
 .tableControls .tableControl {
     background-color: #A1A1A1;
@@ -10,7 +13,7 @@
     font-family: Arial, sans-serif;
     font-size: 14px;
     font-weight: bold;
-    line-height: 24px; /* this is made equal to the height of the input button element */
+    line-height: 24px; /* This is equal to the height of the button element in the sources control */
     margin-right: 5px;
     padding: 2px 5px;
     vertical-align: top;
@@ -25,7 +28,7 @@
     background-color: #A1A1A1;
     left: 0;
     position: absolute;
-    top: 28px;
+    top: 28px; /* This is equal to the rendered height of the sources control */
     width: 100%;
     z-index: 1;
 }
@@ -37,53 +40,78 @@
     margin: 3px;
 }
 
-/* Main table style properties */
-#tableContainer table#status {
-    margin: 10px 0;
-}
-#tableContainer table#status thead th {
-    padding: 5px;
-}
-#tableContainer table#status tbody tr {
+/*
+ * The style properties below apply to the activity table.  Note that if the
+ * implementation contains child tables they will also be affected most of the
+ * properties below (unless otherwise noted).
+ */
+table#status tr {
     height: 30px;
 }
-#tableContainer table#status tbody tr.even {
-    background: #E0E0E0;
-}
-#tableContainer table#status tbody tr.odd {
-    background: #E9E9E9;
-}
-#tableContainer table#status tbody tr td {
+/*
+ * These properties that apply the zebra striping only apply to the main table.
+ * If you wish to modify it to apply to any tables within simply remove the
+ * greater-than characters from the selector.
+ */
+table#status > tbody > tr.even { background: #E0E0E0; }
+table#status > tbody > tr.odd  { background: #E9E9E9; }
+table#status td {
     padding: 0;
 }
-#tableContainer table#status td.links a.minimize, a.maximize {
+table#status td.links {
+    text-align: center;
+}
+table#status td.links a.minimize,
+table#status td.links a.maximize {
     font-size: 18px;
     font-family: monospace;
     font-weight: bold;
 }
-#tableContainer table#status td.links {
-    text-align: center;
-}
-#tableContainer table#status td.source {
+table#status td.source {
     color: #777777;
     font-weight: bold;
 }
-/* Child row style properties */
-#tableContainer table#status tbody tr.child {
+/*
+ * This set of properties is applied to prevent the table cell elements from
+ * expanding which makes it easier to style the table consistently.  When the
+ * content would normally expand the width of the cell (because there is no
+ * white-space for a line break) a hard break is made where necessary.  Note
+ * that it will still break on white-space if available.  Also this desgin
+ * requires the element to have an explicit width, which we default here to 150
+ * pixels.  To override this width add another style class to the element and
+ * define a width for that class (see below for examples of this).
+ */
+table#status td .wrapper {
+    overflow: hidden;
+    width: 150px;
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+    white-space: pre;
+    white-space: -hp-pre-wrap; /* HP Printers */
+    white-space: pre-line;
+}
+table#status td .wrapper.links        { width: 35px; }
+table#status td .wrapper.id           { width: 140px; }
+table#status td .wrapper.status       { width: 120px; }
+table#status td .wrapper.createdAt    { width: 160px; }
+table#status td .wrapper.description  { width: 400px; }
+table#status td .wrapper.source       { width: 85px; }
+
+/*
+ * These styles are applied to the child table that is added by adding a row
+ * to the main table.  The child row is given a height of 0 and the container
+ * of the child table is hidden so that we can use a slide down effect to
+ * present the data.
+ */
+table#status tr.childRow {
     height: 0;
 }
-#tableContainer table#status tbody tr.child .childContainer {
+table#status tr.childRow .childContainer {
     display: none;
-    padding: 0 0 10px 35px;
 }
-.childTable {
-}
-#tableContainer table#status .childTable thead tr {
-    height: 0;
-}
-#tableContainer table#status .childTable thead tr th {
-    padding: 0 5px;
-}
-#tableContainer table#status .childTable tbody tr {
-    background: #F6F6F6;
+table#status tr.childRow .childContainer table.childTable thead {
+    display: none;
 }
